// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`date (isCI = false) > can cancel 1`] = `
[
  "<cursor.hide>",
  "│
◆  Pick a date
│   ___/__/__
└
",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=1>",
  "<erase.down>",
  "■  Pick a date
│",
  "
",
  "<cursor.show>",
]
`;

exports[`date (isCI = false) > defaultValue used when empty submit 1`] = `
[
  "<cursor.hide>",
  "│
◆  Pick a date
│  2025/12/25
└
",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◇  Pick a date
│  2025-12-25",
  "
",
  "<cursor.show>",
]
`;

exports[`date (isCI = false) > renders initial value 1`] = `
[
  "<cursor.hide>",
  "│
◆  Pick a date
│  2025/01/15
└
",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◇  Pick a date
│  2025-01-15",
  "
",
  "<cursor.show>",
]
`;

exports[`date (isCI = false) > renders message 1`] = `
[
  "<cursor.hide>",
  "│
◆  Pick a date
│  2025/01/15
└
",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◇  Pick a date
│  2025-01-15",
  "
",
  "<cursor.show>",
]
`;

exports[`date (isCI = false) > renders submitted value 1`] = `
[
  "<cursor.hide>",
  "│
◆  Pick a date
│  2025/06/15
└
",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◇  Pick a date
│  2025-06-15",
  "
",
  "<cursor.show>",
]
`;

exports[`date (isCI = false) > supports MM/DD/YYYY format 1`] = `
[
  "<cursor.hide>",
  "│
◆  Pick a date
│  01/15/2025
└
",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◇  Pick a date
│  2025-01-15",
  "
",
  "<cursor.show>",
]
`;

exports[`date (isCI = false) > withGuide: false removes guide 1`] = `
[
  "<cursor.hide>",
  "◆  Pick a date
2025/01/15

",
  "<cursor.backward count=999><cursor.up count=3>",
  "<erase.down>",
  "◇  Pick a date
  2025-01-15",
  "
",
  "<cursor.show>",
]
`;

exports[`date (isCI = true) > can cancel 1`] = `
[
  "<cursor.hide>",
  "│
◆  Pick a date
│   ___/__/__
└
",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=1>",
  "<erase.down>",
  "■  Pick a date
│",
  "
",
  "<cursor.show>",
]
`;

exports[`date (isCI = true) > defaultValue used when empty submit 1`] = `
[
  "<cursor.hide>",
  "│
◆  Pick a date
│  2025/12/25
└
",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◇  Pick a date
│  2025-12-25",
  "
",
  "<cursor.show>",
]
`;

exports[`date (isCI = true) > renders initial value 1`] = `
[
  "<cursor.hide>",
  "│
◆  Pick a date
│  2025/01/15
└
",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◇  Pick a date
│  2025-01-15",
  "
",
  "<cursor.show>",
]
`;

exports[`date (isCI = true) > renders message 1`] = `
[
  "<cursor.hide>",
  "│
◆  Pick a date
│  2025/01/15
└
",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◇  Pick a date
│  2025-01-15",
  "
",
  "<cursor.show>",
]
`;

exports[`date (isCI = true) > renders submitted value 1`] = `
[
  "<cursor.hide>",
  "│
◆  Pick a date
│  2025/06/15
└
",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◇  Pick a date
│  2025-06-15",
  "
",
  "<cursor.show>",
]
`;

exports[`date (isCI = true) > supports MM/DD/YYYY format 1`] = `
[
  "<cursor.hide>",
  "│
◆  Pick a date
│  01/15/2025
└
",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=1>",
  "<erase.down>",
  "◇  Pick a date
│  2025-01-15",
  "
",
  "<cursor.show>",
]
`;

exports[`date (isCI = true) > withGuide: false removes guide 1`] = `
[
  "<cursor.hide>",
  "◆  Pick a date
2025/01/15

",
  "<cursor.backward count=999><cursor.up count=3>",
  "<erase.down>",
  "◇  Pick a date
  2025-01-15",
  "
",
  "<cursor.show>",
]
`;
